Add server timeouts
